[metadata]
name = docker0s
description = Use docker-compose to manage multiple apps on a single host
long_description = file: README.rst
keywords = docker containers deployment
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
url = https://radiac.net/projects/docker0s/
project_urls =
    Documentation = https://docker0s.readthedocs.io/
    Source = https://github.com/radiac/docker0s
    Tracker = https://github.com/radiac/docker0s/issues

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click
    fabric
    python-dotenv
    pyyaml

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    docker0s = docker0s.commands:invoke

[tool:pytest]
addopts = --black --mypy --cov=docker0s --cov-report=term --cov-report=html
pythonpath = .

[coverage:run]
parallel=True

[flake8]
ignore = E123,E128,E203,E501,W503
max-line-length = 88
exclude = .tox,.git

[isort]
multi_line_output = 3
line_length = 88
known_first_party = docker0s
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git

[mypy]
ignore_missing_imports = True

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
